--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "run": "npm run serve && start npm run watch",
+        "serve": "php artisan serve"
+
     },
     "devDependencies": {
         "autoprefixer": "^10.3.4",
@@ -20,6 +23,7 @@
         "jquery": "^3.6",
         "laravel-mix": "^6.0.29",
         "lodash": "^4.17.19",
+        "npm-run-all": "^4.1.5",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.6",
         "resolve-url-loader": "^4.0.0",
