--- a/.env
+++ b/.env
@@ -2,17 +2,18 @@ APP_NAME=TargetSteppa
 APP_ENV=local
 APP_KEY=base64:yF1LTeKeFkIAKZsz34gY9cHOkMH7tMeVwbsSQcrEsY8=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=targetsteppa.database
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=targetsteppa
+DB_USERNAME=targetsteppa
+DB_PASSWORD=targetsteppa
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
