--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
-        "twbs/bootstrap": "5.1.0"
+        "twbs/bootstrap": "5.1.0",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
