--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
-        "jquery": "^3.6",
+        "jquery": "^3.6.0",
+        "jquery-ui": "^1.12.1",
         "laravel-mix": "^6.0.31",
         "lodash": "^4.17.19",
         "npm-run-all": "^4.1.5",
@@ -36,6 +37,7 @@
         "aos": "^2.3.4",
         "bootstrap-sass": "*",
         "font-awesome": "^4.7.0",
+        "material-notifications": "^0.8.0",
         "postcss-import": "^14.0.2"
     }
 }
