--- a/package.json
+++ b/package.json
@@ -13,23 +13,27 @@
         "serve": "php artisan serve"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "autoprefixer": "^10.3.4",
         "axios": "^0.21.4",
-        "bootstrap": "^5.1.1",
+        "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.5",
         "browser-sync-webpack-plugin": "^2.3.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.12.1",
-        "laravel-mix": "^6.0.31",
+        "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "npm-run-all": "^4.1.5",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.6",
-        "resolve-url-loader": "^4.0.0",
-        "sass": "^1.41.1",
-        "sass-loader": "^12.1.0",
-        "tailwindcss": "^2.2.15"
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "tailwindcss": "^2.2.15",
+        "vue": "^3.2.27",
+        "vue-loader": "^17.0.0",
+        "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
@@ -38,6 +42,7 @@
         "bootstrap-sass": "*",
         "font-awesome": "^4.7.0",
         "material-notifications": "^0.8.0",
-        "postcss-import": "^14.0.2"
+        "postcss-import": "^14.0.2",
+        "vue-router": "^4.0.12"
     }
 }
