Replacing blade views with vue.

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=TargetSteppa
 APP_ENV=local
 APP_KEY=base64:yF1LTeKeFkIAKZsz34gY9cHOkMH7tMeVwbsSQcrEsY8=
 APP_DEBUG=true
-APP_URL=https://localhost
+APP_URL=http://targetsteppa.test/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
