--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "jquery-ui": "^1.12.1",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
+        "mix-tailwindcss": "^1.3.0",
         "npm-run-all": "^4.1.5",
         "popper.js": "^1.16.1",
         "postcss": "^8.3.6",
