--- a/.env
+++ b/.env
@@ -8,12 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=targetsteppa.database
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=targetsteppa
-DB_USERNAME=targetsteppa
-DB_PASSWORD=targetsteppa
-
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -50,3 +49,4 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+export NODE_ENV=development
