--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "npm run development",
         "dev-watch": "npm run development --watch",
-        "development": "mix",
+        "development": "mix export",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
@@ -15,24 +15,24 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "autoprefixer": "^10.3.4",
-        "axios": "^0.21.4",
+        "axios": "^0.25.0",
         "bootstrap": "^5.1.3",
-        "browser-sync": "^2.27.5",
+        "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
         "jquery": "^3.6.0",
-        "jquery-ui": "^1.12.1",
+        "jquery-ui": "^1.13.1",
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "mix-tailwindcss": "^1.3.0",
         "npm-run-all": "^4.1.5",
         "popper.js": "^1.16.1",
-        "postcss": "^8.3.6",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "postcss": "^8.4.5",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.49.0",
+        "sass-loader": "^12.4.0",
         "tailwindcss": "^2.2.15",
-        "vue": "^3.2.27",
+        "vue": "^3.2.29",
         "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.12"
     },
@@ -41,9 +41,11 @@
         "@popperjs/core": "^2.10.1",
         "aos": "^2.3.4",
         "bootstrap-sass": "*",
+        "follow-redirects": "^1.14.7",
         "font-awesome": "^4.7.0",
         "material-notifications": "^0.8.0",
         "postcss-import": "^14.0.2",
-        "vue-router": "^4.0.12"
+        "vue-router": "^4.0.12",
+        "vuex": "^4.0.2"
     }
 }
