--- a/.env
+++ b/.env
@@ -2,17 +2,18 @@ APP_NAME=TargetSteppa
 APP_ENV=local
 APP_KEY=base64:yF1LTeKeFkIAKZsz34gY9cHOkMH7tMeVwbsSQcrEsY8=
 APP_DEBUG=true
-APP_URL=http://targetsteppa.test/
+APP_URL=http://localhost:80
+MIX_ASSET_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=targetsteppa
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,9 +22,9 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=memcached
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
