--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "@popperjs/core": "^2.10.2",
         "autoprefixer": "^10.3.4",
         "axios": "^0.25.0",
-        "bootstrap": "^5.1.3",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
         "css-minimizer-webpack-plugin": "^3.0.2",
@@ -25,13 +24,12 @@
         "laravel-mix": "^6.0.41",
         "lodash": "^4.17.19",
         "mix-tailwindcss": "^1.3.0",
-        "npm-run-all": "^4.1.5",
         "popper.js": "^1.16.1",
         "postcss": "^8.4.5",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.49.0",
         "sass-loader": "^12.4.0",
-        "tailwindcss": "^2.2.15",
+        "tailwindcss": "^3.0.18",
         "vue": "^3.2.29",
         "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.12"
@@ -44,10 +42,11 @@
         "follow-redirects": "^1.14.7",
         "font-awesome": "^4.7.0",
         "material-notifications": "^0.8.0",
-        "mix": "^0.0.1",
+        "npm": "^8.4.0",
         "nprogress": "^0.2.0",
         "postcss-import": "^14.0.2",
         "vue-router": "^4.0.12",
+        "vue3-transitions": "^1.0.0",
         "vuex": "^4.0.2"
     }
 }
