Replacing blade views with vue.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "dev-watch": "npm run development --watch",
         "development": "mix export",
         "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "watch-poll": "mix watch --development --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
         "production": "mix --production",
@@ -18,7 +18,6 @@
         "axios": "^0.25.0",
         "browser-sync": "^2.27.7",
         "browser-sync-webpack-plugin": "^2.3.0",
-        "css-minimizer-webpack-plugin": "^3.0.2",
         "jquery": "^3.6.0",
         "jquery-ui": "^1.13.1",
         "laravel-mix": "^6.0.41",
@@ -36,11 +35,13 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
+        "@fortawesome/fontawesome-svg-core": "^1.3.0",
         "@popperjs/core": "^2.10.1",
         "aos": "^2.3.4",
         "bootstrap-sass": "*",
         "follow-redirects": "^1.14.7",
         "font-awesome": "^4.7.0",
+        "material-icons": "^1.10.7",
         "material-notifications": "^0.8.0",
         "npm": "^8.4.0",
         "nprogress": "^0.2.0",
